--- a/Domination/honours-project-report/report.tex
+++ b/Domination/honours-project-report/report.tex
@@ -249,6 +249,8 @@ Developed and released by french film director Albert Lamorisse in 1957 as La Co
 \label{fig:risk-equipment}
 \end{figure}
 
+REFERENCE WHERE YOU GOT THIS FROM!
+
 The game consists of three pieces of equipment:
 
 \begin{itemize}
@@ -308,9 +310,9 @@ The game begins with an an initial setup, it involves:
 
 \begin{itemize}
 \item
-Territories being divided equally between players.
+Territories equally divided in a random order between players.
 \item
-Players being given a starting number of armies which is inversely proportionally to the number of players.
+Players being given a number of starting armies. This number is calculated by taking an explicit number defined by the R.I.S.K rule book, which is inversely proportional to the number of players, and subtracting it from the number of territories the player owns. For example if there are three players, each player receives 35 starting armies and as there are 42 territories each player receives 14 territories. Therefore the number of remaining armies 35 subtract 14.
 \item
 Players distributing their starting armies over their territories.
 \item
@@ -540,9 +542,9 @@ The pending set of a player's attack actions for any turn is to either successfu
 
 If a player $p$ successfully occupies a territory $T_{o}$, then the attack actions of neighbouring territories of $T_{o}$ are added to $p$'s attack pending set. If they lose a territory $T_{l}$ due to another player's successful attack, then any attack actions of neighbouring territories of $T_{l}$ are removed from their attack pending set for their next turn. 
 
-The attack action is thus modelled as a singular event that is either \textit{consistent} or \textit{inconsistent} with explanations of a players behaviour.
+The attack action is a singular event that is either \textit{consistent} or \textit{inconsistent} with explanations of a players behaviour. 
 
-For example, given three explanations:
+For example given three explanations:
 
 \begin{enumerate}
 \item
@@ -554,8 +556,6 @@ Occupy Asia and South America.
 \end{enumerate}
 
 Successfully occupying a territory in North America would be \textit{consistent} with explanations 1 and 2, but \textit{inconsistent} with 3, or in probabilistic terms the likelihood of 1 and 2 would rise whereas 3 would fall.
-
-TALK ABOUT DIRECTLY AND INDIRECTLY CONSISTENT ACTIONS!
 
 Having defined the outcome of attacks as either successful or unsuccessful, attacks can be decomposed into following two actions: 
 
@@ -802,25 +802,22 @@ After initializing an empty pending set $playerPS$. The above pseudo code first 
 
 Before proceeding onto the next territory in $PT$ another loop is performed through the set of neighbouring territories $TN$ of that territory with an if-then-else statement. If the player owns that territory then the if condition $playerOwnN$ return true and a $MovementT$ action is added to $playerPS$, if not then a $OccupyT$ action is added to $playerPS$. After the operation the $playerPS$ is returned and can be cached if necessary.
 
-With the $generatePS$ operation and an idea from a paper by Goldman, Geib and Miller \cite{Goldman99anew} which proposes weighting action probabilities towards consistent actions, a method of weighting actions was then required. This was based on reasoning about the implications of an action to an explanation where consistent actions were positively weighted and inconsistent negatively weighted.
+With the $generatePS$ operation and an idea from a paper by Goldman, Geib and Miller \cite{Goldman99anew} which proposes weighting action probabilities towards consistent actions, a technique of doing so in the R.I.S.K. environment was required. Based on reasoning about the implications of an action to an explanation, consistent actions were positively weighted and inconsistent negatively weighted, but by how much is the crucial question?
 
-THIS SECTION NEEDS WORK
+SECTION NEEDS MORE WORK!
 
-Uniform distribution
+The first approach to answer this was given a players pending set, the total number of actions are counted, these actions are then separated into consistent and inconsistent actions then a manually defined total weight is split among consistent and inconsistent respectively. For example out of a total action probability of 1.0, 0.5 would be distributed among consistent actions and 0.5 inconsistent actions. The idea behind this approach was that as the number of consistent actions decreased the likelihood of the them choosing the action given an explanation would in theory increase.
 
-Uniform-Weighting based on number of consistent and inconsistent actions available to a player when an action is performed.
+Unfortunately this approach proved to be problematic in cases where the number of consistent and inconsistent probabilities were significantly different and even detrimental in cases where the number of inconsistent actions were greater. 
 
-Question was how to assign weights to consistent and inconsistent actions?
+For example, if there are:
 
-Total number of actions are counted, and are separated into inconsistent actions and consistent actions and a weight is split among inconsistent actions and consistent actions. Problem is that it seems this system is too sensitive.
+Case 1: 2 consistent actions and 4 inconsistent actions, Pr(cons) = 0.5 / 2 = 0.25 , Pr(incons) = 0.5 / 4 = 0.125 
+Case 2: 4 consistent actions and 2 inconsistent actions. Pr(cons) = 0.5 / 4 = 0.125, Pr(incons) = 0.5 / 2 = 0.25
 
-Because of sensitivity had to make up a more evenly weighted automatic system.
+These significant differences in probabilities resulted in large changes in the probability of an explanation, because of these issues it required an operation that would allow greater control over the weighting between consistent and inconsistent actions. The following pseudo-code details the operation:
 
-It required an operation that would allow greater control over weighting between consistent and inconsistent actions.
-
-Therefore made proportional weighted system
-
-THIS SECTION NEEDS WORK
+SECTION NEEDS MORE WORK!
 
 \begin{pseudocode}[ruled]{computeBaseWeight}{w, pTotalActNum, pConsActNum}
 \begin{algorithm}[H]
@@ -1060,21 +1057,21 @@ Domination has existing A.I. player implementations for its game modes. The A.I.
 
 According to the developer the A.I. does not actually actively follow a plan but according to the developer "the mission A.I. is a minimal extension of the core play. Since the core logic is reasonably good at conquering continents and eliminating opponents it just has it's decisions skewed a little to make sure it's going after the right continent/player without causing it to generally play poorly. "
 
-Automating the process of initiating A.I. games provided an opportunity for the collection of a large number of data samples for evaluation purposes. 
+The collection of A.I. play data samples was automated using an free macro program called \textit{AutoHotkey}. By automating the process of initiating A.I. games, it provided an opportunity for the collection of a large number of data samples for evaluation purposes. 
 
 \subsection{Constrained Play}
 
-In this form of play, players are asked only to perform actions that are \textit{directly consistent} with their root-goal. This is opposed to \textit{indirectly consistent} where for example players break other players continents because preventing other players from completing their mission makes completing your own mission more likely.
+In this form of play, players are asked only to perform actions that are \textit{directly-consistent} with their root-goal. This is opposed to \textit{indirectly-consistent} where for example players break other players continents because preventing other players from completing their mission makes completing ones own mission more likely.
 
 More formally (excluding card related actions) given a set of actions a player will only either:
 
 \begin{itemize}
 \item
-Choose to attack a territory that is directly consistent with their plan or a territory that is on the shortest route to a territory that is directly consistent with their plan.
+Choose to attack a territory that is directly-consistent with their plan or a territory that is on the shortest route to a territory that is directly consistent with their plan.
 \item
-Reinforce a territory that is directly consistent with their plan or a territory that is on the shortest route to a territory that is directly consistent with their plan.
+Reinforce a territory that is directly-consistent with their plan or a territory that is on the shortest route to a territory that is directly consistent with their plan.
 \item
-Moves armies to a territory that is directly consistent with their plan or a territory that is on the shortest route to a territory that is directly consistent with their plan.
+Moves armies to a territory that is directly-consistent with their plan or a territory that is on the shortest route to a territory that is directly consistent with their plan.
 \end{itemize}
 
 This artificially constructed form of play is designed to be the comparatively easier to perform plan recognition on. By establishing that the algorithm works given that players behave only in a manner that is directly consistent with the mission they have been given, provides grounds to establish that the majority of incorrect classifications arise from players performing actions that are either indirectly consistent or inconsistent with the players mission.
@@ -1095,7 +1092,7 @@ At the end of the game participants gave a short summary of their initial plan d
 
 \section{Data Collection}
 
-After a game has finished the system generates two files. One a log file which using a debug tool created by the developers, allows a completely independent replay of the game. 
+After a game was finished the system generated two files. One a log file which using a debug tool created by the developers, allows a completely independent replay of the game. 
 
 This has significant implications in that the environment can be eliminated as a changing variable in the evaluation process since a game can be reproduced but with the plan recognition agent being implemented differently or with different probability calibrations. 
 
@@ -1110,8 +1107,6 @@ Each players actual mission.
 The probabilities of each players respective explanations over the course of the game.
 \end{itemize}
 
-Collection of A.I. play data samples was automated using an free macro program called \textit{AutoHotkey}. 
-
 Python scripts were used to analyse the set of csv files.
 
 Used a tool created by developers to replay games in-order to be able to re-test the algorithm with changes in modelling/calibration.
@@ -1122,7 +1117,7 @@ Using an system built by the original developers was able to easily reproduce a 
 
 \section{Experimental Findings}
 
-Start with major insights and prove with data
+\textbf{Start with major insights and prove with data}
 
 Experiments with the plan recognition revealed several insights into the data:
 
@@ -1132,7 +1127,7 @@ The difficulty of a mission has an affect on the prediction accuracy of the agen
 
 People perform better than the games A.I.
 
-Main questions to answer.
+Does it perform better on certain explanations? Why?
 
 Whether is converges?
 
@@ -1148,11 +1143,7 @@ SHOW AN EXAMPLE OF IT NOT CONVERGING
 
 How fast it converges?
 
-Converges quite quickly after the attacks begin
-
-ATTACKS BEGIN TURN ?? PROBABILITIES MOVE MUCH MORE SIGNIFICANTLY AFTER THIS TURN.
-
-why because model has been built giving attacks the most significance. use data from average data over time.
+42 turns are required for the distribution of armies over the R.I.S.K map. After the remaining starting armies are distributed during this the probability of each explanation shifts by a small amount depending on whether the action was consistent or not. Once the distribution of armies is complete, which could be from 80 to 120 turns depending on the number of players, the probabilities move much more rapidly this is because the prediction agents model has been built to give attacks the most significance.
 
 Present table of general accuracy
 
@@ -1569,6 +1560,8 @@ Eliminating player mission cards - some system where data of who is being consis
 The application of more sophisticated computation models based on the idea of generating a pending set from the state of the world then performing calculations with that pending set.
 
 Only attack actions have been modelled in a manner other than scaling up and down explanation probability
+
+Model can be augmented as any action could in fact be further decomposed into two types,\textit{directly-consistent} or \textit{indirectly-inconsistent}. For example a directly-consistent action would be to occupy a territory of an explanation, where as an indirectly-consistent action would be a player breaking another players continent by occupying a territory in that continent, as preventing other players from completing their mission makes completing ones own mission more likely. This distinction has not been taken into account in the model and investigation into the effects of doing some may yield improvements.
 
 Using the plan recognition software given a programs a plan to detect how well a program performs a plan. 
 
