--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -172,4 +172,9 @@ in today's games.}},
  address = {{Hingham, MA, USA}},
  keywords = {Bayesian Belief Networks, Plan recognition, abstraction, language learning, performance evaluation.},
 } 
+
+@article{riskimage,
+ author = {{Image taken from}},
+ title = {{$http://www.insurgencygaming.com$}},
+}
  
